<resources>
    <string name="app_name">Alpha Project</string>

    <!--variabili della schemata principale-->
    <string name="share">SHARE</string>
    <string name="settings">SETTINGS</string>
    <string name="example">Example</string>

    <!--variabili schermata di settings-->
    <string name="nome">Nome</string>
    <string name="name">Inserisci il tuo nome</string>
    <string name="cognome">Cognome</string>
    <string name="surname">Inserisci il tuo cognome</string>
    <string name="numero_telefono">Telefono</string>
    <string name="contact">Inserisci il tuo numero di telefono</string>
    <string name="mail">E-Mail</string>
    <string name="email">Inserisci la tua mail</string>

    <string name="Indirizzo">Indirizzo</string>
    <string name="addr">Inserisci un indirizzo</string>
    <string name="instagram">Instagram</string>
    <string name="ins">Username</string>
    <string name="twitter">Twitter</string>
    <string name="Twitter">Username</string>
    <string name="linkedin">LinkedIn</string>
    <string name="Linkedin">Inserisci il link</string>
    <string name="note">Note:</string>
    <string name="Note">Inserisci qualche appunto</string>

    <string name="reset">Reset</string>
    <string name="ritorno">Return</string>
    <string name="save">Save</string>
    <string name="vcard">Create a vcard</string>

    <!--variabili schermata di nfc-->
    <string name="Send">Send vcard</string>

</resources>