<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
        android:orientation="vertical"
    tools:context=".SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/settings"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/nome"
        />
    <EditText android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/cognome"
        />
    <EditText android:id="@+id/cognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cognome"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/numero_telefono"
        />

    <EditText android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_telefono"
        android:inputType="phone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/mail"
        />

    <EditText android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/instagram"
        />

    <EditText android:id="@+id/instagram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instagram"
        tools:ignore="TextFields" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/linkedin"
        />

    <EditText android:id="@+id/linkedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/linkedin"
        tools:ignore="TextFields" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:id="@+id/create"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_700"
                android:text="@string/create"
                tools:ignore="ButtonStyle" />

            <!-- Reset Button-->
            <Button android:id="@+id/RESETBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_700"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

            <Button android:id="@+id/ritorno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_700"
                android:text="@string/ritorno"
                tools:ignore="ButtonStyle" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>